<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.luckstro.videooverlay.fragment.AddTeamFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name_long" />

    <EditText
        android:id="@+id/team_name_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name_short" />

    <EditText
        android:id="@+id/team_name_short"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:text="@string/save"/>

        <Button
            android:id="@+id/add_team_on_time_use_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/one_time"/>

        <Button
            android:id="@+id/add_team_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:onClick="onClick"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
