<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:paddingBottom="16dp"
        android:elevation="2dp"
        android:background="@drawable/team_details_background">

        <EditText
            android:id="@+id/team_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/team_name_long_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="8dp"
            android:text="@string/team_name_long"
            android:textSize="12sp"
            android:textColor="#80000000"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/team_name_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_name_long_label" />

        <TextView
            android:id="@+id/team_mascot_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_mascot"
            android:textSize="12sp"
            android:textColor="#80000000"
            android:fontFamily="sans-serif"
            android:layout_below="@id/team_name_long" />

        <EditText
            android:id="@+id/team_mascot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_mascot_label" />

        <TextView
            android:id="@+id/team_name_short_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_name_short"
            android:textSize="12sp"
            android:textColor="#80000000"
            android:fontFamily="sans-serif"
            android:layout_below="@id/team_mascot" />

        <EditText
            android:id="@+id/team_name_short"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_name_short_label" />

        <TextView
            android:id="@+id/team_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_color"
            android:textSize="12sp"
            android:textColor="#80000000"
            android:fontFamily="sans-serif"
            android:layout_below="@id/team_name_short" />

        <Button
            android:id="@+id/color_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/team_color_label"
            android:layout_marginBottom="16dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/color_button"
            android:textColor="@color/blue"
            android:text=" "
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <Space
            android:id="@+id/spaceHolder"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:layout_below="@id/color_button"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/edit_team_save_button"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@id/spaceHolder"
            android:layout_toStartOf="@id/spaceHolder"
            android:layout_below="@id/color_button"
            android:layout_marginBottom="16dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/clear_button"
            android:textColor="@color/blue"
            android:text="Save"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"/>

        <Button
            android:id="@+id/edit_team_cancel_button"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/spaceHolder"
            android:layout_toEndOf="@id/spaceHolder"
            android:layout_below="@id/color_button"
            android:layout_marginBottom="16dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/clear_button"
            android:textColor="@color/blue"
            android:text="Cancel"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"/>

    </RelativeLayout>

    <include
        android:id="@+id/photoHeader"
        layout="@layout/team_detail_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/relativeLayout"
        app:layout_anchorGravity="top|center"/>
</android.support.design.widget.CoordinatorLayout>