<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_add_score_main"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luckstro.videooverlay.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/video_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/media_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_skip_previous_black_24dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fast_rewind_black_24dp"/>
            <ImageView
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"/>
            <ImageView
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@drawable/ic_pause_black_24dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fast_forward_black_24dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_skip_next_black_24dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_panel"
        android:layout_toRightOf="@id/video_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/action_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/action"
            android:textColor="#80000000"
            android:textSize="12sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/note_button"
                        fab:fab_colorNormal="@color/white"
                        fab:fab_title="Comment"
                        fab:fab_colorPressed="@color/white"/>

                    <TextView
                        android:id="@+id/add_comment_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/add_comment"
                        android:textColor="#80000000"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/scoreboard_button"
                        fab:fab_colorNormal="@color/white"
                        fab:fab_title="Score"
                        fab:fab_colorPressed="@color/white"/>

                    <TextView
                        android:id="@+id/add_score_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/add_score"
                        android:textColor="#80000000"
                        android:textSize="12sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_player"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/player_icon"
                        fab:fab_colorNormal="@color/white"
                        fab:fab_title="Add Player"
                        fab:fab_colorPressed="@color/white"/>

                    <TextView
                        android:id="@+id/add_player_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/add_player"
                        android:textColor="#80000000"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_spotshadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/spotlight_icon"
                        fab:fab_colorNormal="@color/white"
                        fab:fab_title="Spotshadow"
                        fab:fab_colorPressed="@color/white"/>

                    <TextView
                        android:id="@+id/spotshadow_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/add_spotshadow"
                        android:textColor="#80000000"
                        android:textSize="12sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.getbase.floatingactionbutton.FloatingActionButton
                        android:id="@+id/add_telestrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/telestrate_button"
                        fab:fab_colorNormal="@color/white"
                        fab:fab_title="Telestrate"
                        fab:fab_colorPressed="@color/white"/>

                    <TextView
                        android:id="@+id/telestrate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/telestrate"
                        android:textColor="#80000000"
                        android:textSize="12sp" />
                </LinearLayout>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>